# UMGC

./: README.md  desktop.ini
ASTR100/: KyraSamuelSunJupiter.doc  Kyra_Samuel_Lab1.xlsx  Star Count Project 3.doc
CMIS141/A1/: Main.java
CMIS141/A2/: Main.java
CMIS141/A3/: Main.java
CMIS141/FP/: Employee.java  EmployeesFactory.java  Main.java
CMIS141/Mods/: DistancePoints.java
CMIS242/A1/: Samuel_A1_CMIS242.docx
CMIS242/D3/: Bike.java  Discussion4.java  Main.java  Train.java  Transportation.java
CMIS242/D4/: ColorChooser.java  Main.java
CMIS242/D6/: Discussion6.java  Human.java  Species.java
CMIS242/D7/: Discussion7.java  DiscussionError.java  Main.java
CMIS242/FP/: CMIS242FP-KS.docx
CMIS320/P3/: P3Notebook.ipynb  kyrasamuel_project3.sql
CMSC330/Discussions/: main.java
CMSC330/P1/: Main.java  Parser.java  Project1.java  Tokenizer.java  incorrect.txt  test.txt  test2.txt  test3.txt
CMSC330/P2/: CMakeLists.txt  andop.h  conditional.h  divide.h  equals.h  expression.h  greaterthan.h  lessthan.h  main.cpp  minus.h  negate.h  operand.cpp  orop.h  subexpression.cpp  symboltable.h  test1.txt  test2.txt  test3.txt  tests.txt  times.h
CMSC350/P1/: Main.java
CMSC350/P2/: Main.java  OrderedList.java  Polynomial.java
CMSC350/P3/: Drawing.java  OutsideBounds.java  Oval.java  Rectangular.java
CMSC350/P4/: Main.java  Property.java
CMSC405/P2/: Main.java
CMSC405/P3/: .firebaserc
CMSC405/P4/: .firebaserc
CMSC430/Discussions/: week_one.txt
CMSC430/P1/: lexemes.txt  listing.cc  listing.h  scanner.c  scanner.l  (+7 more)
SDEV400/: Documents - Shortcut.lnk
(+351 files in other folders)
